test/files/neg/t7238.check
t7238.scala:6: error: type mismatch;
 found   : scala.collection.immutable.Seq[Any]
 required: scala.collection.immutable.Seq[String]
  c.c()(Seq[Any](): _*)
                ^
one error found
